--- a/pixi.toml
+++ b/pixi.toml
@@ -8,7 +8,6 @@ platforms = ["linux-64"]
 [activation]
 scripts = ["scripts/set_ros_env.sh"]
 
-
 [dependencies]
 python = "*"
 compilers = "*"
@@ -47,8 +46,14 @@ ros-jazzy-xacro = ">=2.0.13,<3"
 rosdep = "*"
 
 [feature.jazzy.tasks]
-build = "colcon build --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF"
-franka = "bash install/setup.bash && ros2 launch franka_bringup franka.launch.py"
+clone = "git clone https://github.com/frankarobotics/franka_ros2.git -b jazzy src/franka_ros2 && git clone https://github.com/frankarobotics/franka_description.git src/franka_description && git clone --recurse-submodules https://github.com/frankarobotics/libfranka.git src/libfranka"
+update-libfranka = "cd src/libfranka && git submodule update --init --recursive && cd ../../"
+apply-patches = "bash apply_patches.sh"
+ignore-gazebo = "touch src/franka_ros2/franka_gazebo/COLCON_IGNORE"
+build = "colcon build --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -Wno-dev"
+
+setup = { cmd = "source install/setup.bash" , depends-on = ["clone", "update-libfranka", "apply-patches", "ignore-gazebo", "build"] }
+franka = { cmd = "bash install/setup.bash && ros2 launch franka_bringup franka.launch.py", depends-on = ["build"]}
 
 [feature.dev.pypi-dependencies]
 ruff= "*"
